# parallel

./: CMakeLists.txt  Makefile  PROJECT_STRUCTURE.md  README.md  RUN.md  benchmark_all.sh  benchmark_manager.sh  build_main.sh  main  main.c  quickstart.sh  sort_lib.c  sort_lib.h
benchmark/: ket_qua_benchmark-v1.txt  ket_qua_benchmark-v2.txt  ket_qua_benchmark-v3.txt  ket_qua_benchmark-v4.txt  ket_qua_benchmark-v5.txt
include/: sort_lib.h  sort_ogt.h
scripts/: build.sh  clean.sh  run_tests.sh
sort_ogt/: .gitignore  CMakeLists.txt  REPORT.md  quickstart.sh
sort_ogt/include/: sort_ogt.h
sort_ogt/src/ogt/: ogt_ui.c  sort_mpi.c  sort_openmp.c  sort_pthread.c  utils.c
src/: benchmark.c  main.c  ogt_ui.c  sort_lib.c  sort_mpi.c  sort_openmp.c  sort_pthread.c  sort_seq.c  utils.c
src/ogt/: ogt_benchmark.c  ogt_demo.c  ogt_test.c  ogt_ui.c  sort_seq.c
